--- a/app/src/main/res/layout/fragment_three.xml
+++ b/app/src/main/res/layout/fragment_three.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/padding_margin_medium"
             android:layout_marginTop="@dimen/padding_margin_medium"
-            android:contentDescription="@string/trello_logo"
+            android:contentDescription="@string/trello_img"
             android:src="@drawable/zapier" />
 
         <TextView
@@ -41,7 +41,7 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_marginBottom="@dimen/padding_margin_medium"
-            android:contentDescription="@string/trello_organize"
+            android:contentDescription="@string/trello_img"
             android:src="@drawable/taco_desktop" />
 
         <ImageView
@@ -50,7 +50,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_marginTop="@dimen/padding_margin_medium"
-            android:contentDescription="@string/trello_paws"
+            android:contentDescription="@string/trello_img"
             android:onClick="tacoClick"
             android:src="@drawable/taco"
             android:visibility="visible" />
