--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#757575</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorOne">#297FB8</color>
+    <color name="colorTwo">#C2175B</color>
+    <color name="colorThree">#3D3D3D</color>
+    <color name="colorFour">#2ACCE5</color>
 </resources>
